istio_envoy_filter/envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: customize-authz-response
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          local_reply_config:
            mappers:
            - filter:
                status_code_filter:
                  comparison:
                    op: EQ
                    value:
                      default_value: 403 # Replace to 401 if you want to customize for the JWT validation fail response
                      runtime_key: placeholder
              status_code: 403
              body:
                inline_string: Sorry, the page you're looking for cannot be accessed
              body_format_override:
                text_format: "<!DOCTYPE html><html lang=\"en\" ><head> <meta charset=\"UTF-8\"> <title>%RESPONSE_CODE% - Access Denined</title> <link rel=\"stylesheet\" href=\"https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css\"> <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'> <style>@import url(https://fonts.googleapis.com/css?family=Montserrat:400,400i,700);*,:after,:before{box-sizing:border-box}body{background-col [...]
                content_type: "text/html; charset=UTF-8"
